--- a/index.html
+++ b/index.html
@@ -7,23 +7,22 @@
     <head>
         <meta charset="utf-8">
         <title>
-            V-Hub @ Vardhaman
+            A Washed-up Nerd
         </title><!-- Behavioral Meta Data -->
         <meta content="yes" name="apple-mobile-web-app-capable">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"><!-- Core Meta Data -->
-        <meta content="V-Hub" name="author">
-        <meta content="Something new for CIE at Vardhman is coming here soon." name="description">
+        <meta content="A Washed-up Nerd " name="author">
+        <meta content="Something new for A Washed-up Nerd is coming here soon." name="description">
         <meta content="Comming Soon, Responsive, Landing Page, One Page" name="keywords"><!-- Open Graph Meta Data -->
-        <meta content="Something new for CIE at Vardhman is coming here soon.">
-        <meta content="V-Hub">
-        <meta content="V-Hub">
+        <meta content="Something new for A Washed-up Nerd is coming here soon.">
+        <meta content="A Washed-up Nerd">
+        <meta content="A Washed-up Nerd">
         <meta content="website">
         <meta content="index.html"><!-- Twitter Card Meta Data -->
         <meta content="summary" name="twitter:card">
         <meta content="@yayinailabs" name="twitter:site">
         <meta content="@yayinailabs" name="twitter:creator">
-        <meta content="V-Hub" name="twitter:title">
-        <meta content="Vardhaman Hub" name="twitter:description">
+        <meta content="A Washed-up Nerd " name="twitter:title">
 
         <link href="favicon.png" rel="shortcut icon" type="image/png">
 
@@ -70,7 +69,7 @@
                 <li class="layer" data-depth="0.20">
                     <div class="title">
                         <h2>
-                            Vardhaman Hub
+                            A Washed-up Nerd
                         </h2>
                         <span class="line"></span>
                     </div>
@@ -85,11 +84,11 @@
                 <li class="layer" data-depth="0.30">
                     <div class="hero">
                         <h1 id="countdown">
-                            Something new for V-Hub & CIE at Vardhaman is coming here soon.
+                            Something new for A Washed-up Nerd is coming here soon.
                         </h1>
 
                         <p class="sub-title">
-                            Something new for V-Hub & CIE at Vardhman is coming here soon.
+                            Something new for A Washed-up Nerd is coming here soon.
                         </p>
                     </div>
                 </li>
@@ -158,20 +157,18 @@
                     <div class="contact">
                         <ul class="icons">
                             <li>
-                                <a class="behance" href="https://vardhaman.org/"><i class="fa fa-behance"></i></a>
+                                <a class="behance" href="https://yayinailab.tech/"><i class="fa fa-behance"></i></a>
                             </li>
 
                             <li>
-                                <a class="twitter" href="https://vardhaman.org/"><i class="fa fa-twitter"></i></a>
+                                <a class="twitter" href="https://yayinailab.tech/"><i class="fa fa-twitter"></i></a>
                             </li>
 
                             <li>
-                                <a class="dribbble" href="https://vardhaman.org/"><i class="fa fa-dribbble"></i></a>
+                                <a class="dribbble" href="https://yayinailab.tech/"><i class="fa fa-dribbble"></i></a>
                             </li>
                         </ul>
                         <p>Forked the Theme from <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>, Handcrafted with ❤ by <a href="https://yayinailab.tech/" target="_blank"> Yayin AI Lab </a> hosted with Github </p>
-                        <p>For <a href="https://vardhaman.org/" target="_blank">Vardhaman College of Engineering</a> 
-                            & VEC EXPERIMENTAL HUB. Reach us at <a class="mail" href="mailto:cie@vardhaman.org?subject=Hi%20Interested%20learning%20more!">cie@vardhaman.org</a>.</p>
                     </div>
                 </li>
             </ul>
