changes to cc tld

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            A Washed-up Nerd
+            New Domain for Yayin AI Lab
         </title><!-- Behavioral Meta Data -->
         <meta content="yes" name="apple-mobile-web-app-capable">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"><!-- Core Meta Data -->
@@ -69,7 +69,7 @@
                 <li class="layer" data-depth="0.20">
                     <div class="title">
                         <h2>
-                            A Washed-up Nerd
+                            Yayin AI Lab
                         </h2>
                         <span class="line"></span>
                     </div>
@@ -84,11 +84,11 @@
                 <li class="layer" data-depth="0.30">
                     <div class="hero">
                         <h1 id="countdown">
-                            Something new for A Washed-up Nerd is coming here soon.
+                            We are moving from yayinailab.tech to here soon.
                         </h1>
 
                         <p class="sub-title">
-                            Something new for A Washed-up Nerd is coming here soon.
+                            Something new for Yayin AI Lab is coming here soon.
                         </p>
                     </div>
                 </li>
